# nolus-money-market

./: .check-formatting-image-id  .dockerignore  .gitignore  .gitlab-ci.yml  .rust-stable-image-id  CLAUDE.md  Cargo.toml  Containerfile  README.md  RUNBOOK.md  build.Containerfile  check.Containerfile  flake.nix  gen-currencies.sh  justfile  lint.sh  manage-runners.sh  msgs.env  release.md  rust-toolchain  rust-toolchain.toml  shell.nix
contracts/admin/: Cargo.toml  build.rs
contracts/admin/examples/: admin_schema.rs
contracts/admin/src/: common.rs  error.rs  lib.rs  migrate_contracts.rs  msg.rs  state.rs
contracts/borrow/: Cargo.toml
contracts/borrow/examples/: schema.rs
contracts/borrow/src/: contract.rs  error.rs  helpers.rs  instantiate_msg_response.rs  lib.rs  msg.rs  state.rs
contracts/dispatcher/: Cargo.toml
contracts/dispatcher/examples/: dispatcher_schema.rs  schema.rs
contracts/dispatcher/src/: access_control.rs  config.rs  contract.rs  dispatcher.rs  dispatcher_ref.rs  error.rs  lib.rs  msg.rs
contracts/lease/: Cargo.toml
contracts/lease/examples/: lease_schema.rs  schema.rs
contracts/lease/src/: amount.rs  application.rs  bank.rs  constants.rs  contract.rs  dex.rs  error.rs  event.rs  from_forms.rs  interest.rs  lease.rs  liability.rs  lib.rs  loan.rs  msg.rs  opening.rs  percent.rs  repay_id.rs  reply_id.rs
contracts/leaser/: Cargo.toml
contracts/leaser/examples/: schema.rs
contracts/leaser/src/: config.rs  contract.rs  error.rs  helpers.rs  integration_tests.rs  leaser.rs  lib.rs  lpp_querier.rs  migrate.rs  msg.rs  state.rs  tests.rs  unit_tests.rs
contracts/lpp/: Cargo.toml
contracts/lpp/examples/: schema.rs
contracts/lpp/src/: access_control.rs  borrow.rs  calc.rs  config.rs  contract.rs  error.rs  event.rs  lib.rs  loan.rs  lpp.rs  msg.rs  nlpn.rs  serde_utils.rs  state.rs  stub.rs
contracts/oracle/: Cargo.toml  README.md
contracts/oracle/examples/: oracle_schema.rs  schema.rs
contracts/oracle/src/: access_control.rs  alarms.rs  contract.rs  contract_validation.rs  convert.rs  error.rs  helpers.rs  integration_tests.rs  lib.rs  macros.rs  msg.rs  oracle.rs  state.rs  stub.rs  tests.rs
contracts/profit/: Cargo.toml
contracts/profit/examples/: schema.rs
contracts/profit/src/: access_control.rs  config.rs  contract.rs  error.rs  event.rs  lib.rs  msg.rs  profit.rs  stub.rs
contracts/timealarms/: Cargo.toml  README.md
contracts/timealarms/examples/: schema.rs
contracts/timealarms/src/: alarms.rs  contract.rs  dispatcher.rs  error.rs  lib.rs  migrate_v1.rs  msg.rs  stub.rs
contracts/treasury/: Cargo.toml
contracts/treasury/examples/: schema.rs
contracts/treasury/src/: access_control.rs  contract.rs  error.rs  lib.rs  msg.rs  state.rs
integration_tests/: Cargo.toml
integration_tests/src/: dispatcher_tests.rs  leaser_tests.rs  lib.rs  lpp_tests.rs
integration_tests/src/common/: dispatcher_wrapper.rs  lease_wrapper.rs  lpp_wrapper.rs  mock_dispatcher.rs  mock_lease.rs  mock_profit.rs  mock_treasury.rs  mod.rs  profit_wrapper.rs  test_case.rs
platform/: .dockerignore  .gitignore  Cargo.toml  lint.sh
platform/contracts/admin/: Cargo.toml
platform/contracts/dispatcher/: Cargo.toml
platform/contracts/timealarms/: Cargo.toml
platform/contracts/treasury/: Cargo.toml
platform/tests/: Cargo.toml
platform/tests/src/: rust_runtime_tests.rs
protocol/: .dockerignore  .gitignore  Cargo.toml
protocol/contracts/drain_vault/: Cargo.toml
protocol/contracts/lease/: Cargo.toml
protocol/contracts/leaser/: Cargo.toml
protocol/contracts/lpp/: Cargo.toml
protocol/contracts/oracle/: Cargo.toml  README.md
protocol/contracts/profit/: Cargo.toml
protocol/contracts/remote_lease/: Cargo.toml
protocol/contracts/remote_profit/: Cargo.toml
protocol/contracts/reserve/: Cargo.toml
protocol/contracts/void/: Cargo.toml
protocol/docs/: remote-lease-admin-runbook.md  remote-lease-callback-flow.md
protocol/tests/: Cargo.toml
protocol/tests/data/: dev-osmosis-oracle.txt  oracle_v1.txt  oracle_v2.txt  readme.md
protocol/tests/src/: lib.rs  migrate.rs  prices.rs
protocol/tests/tests/: oracle.rs
tests/: .dockerignore  .gitignore  Cargo.toml
tests/src/: dispatcher_tests.rs  lease_tests.rs  leaser_tests.rs  lib.rs  lpp_tests.rs  oracle_tests.rs  profit_tests.rs  reserve.rs  timealarms_tests.rs  treasury_tests.rs
tests/src/common/: dispatcher.rs  dispatcher_wrapper.rs  ibc.rs  lease.rs  lease_wrapper.rs  leaser.rs  leaser_wrapper.rs  lpp.rs  lpp_wrapper.rs  mod.rs  oracle.rs  oracle_wrapper.rs  profit.rs  profit_wrapper.rs  protocols.rs  remote_lease_controller_stub.rs  remote_profit_controller_stub.rs  reserve.rs  swap.rs  test_case.rs  testing.rs  timealarms.rs  timealarms_wrapper.rs  treasury.rs  treasury_wrapper.rs
tests/src/lease/: close.rs  close_policy.rs  close_position.rs  compare_with_lpp.rs  dex.rs  heal.rs  mod.rs  open.rs  remote_lease_callback.rs  remote_lease_close.rs  remote_lease_funding.rs  remote_lease_open.rs  remote_lease_open_unwind.rs  remote_lease_opening_terminal.rs  remote_lease_slippage_terminal.rs  remote_lease_swap.rs  remote_lease_transfer_out.rs  repay.rs  safe_delivery.rs  slippage.rs
tests/src/lease_tests/: close.rs  close_mod.rs  compare_with_lpp.rs  mod.rs  open.rs  repay.rs  repay_mod.rs
tests/src/leaser/: change_admin.rs  config_lease.rs  mod.rs  open_lease.rs  quote.rs  resolve_anomaly.rs
tools/: .dockerignore  Cargo.toml
tools/cargo-each/: Cargo.toml
tools/cargo-each/src/: check.rs  config.rs  either_iter.rs  iter_or_else_iter.rs  main.rs  pipe.rs
tools/cargo-features/: Cargo.toml
tools/cargo-features/src/: consts.rs  main.rs
tools/graph/: Cargo.toml
tools/graph/src/: compared_pair.rs  lib.rs
tools/json-value/: Cargo.toml
tools/json-value/src/: lib.rs
tools/json-value/tests/: structs.rs  tokens.rs
tools/nolus-config/: Cargo.toml
tools/nolus-config/src/: args.rs  currencies.rs  currency.template.txt  error.rs  groups.template.txt  lib.rs  main.rs
tools/nolus-config/templates/: currency.template.txt  (+2 more)
tools/topology/: Cargo.toml
(+935 files in other folders)
