[workspace]
members = ["packages/*", "contracts/*", "tests"]

resolver = "2"

[workspace.package]
rust-version = "1.64"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
# Own Contracts
rewards_dispatcher = { path = "./contracts/dispatcher", default-features = false }
lease = { path = "./contracts/lease", default-features = false }
leaser = { path = "./contracts/leaser", default-features = false }
lpp = { path = "./contracts/lpp", default-features = false }
oracle = { path = "./contracts/oracle", default-features = false }
profit = { path = "./contracts/profit", default-features = false }
timealarms = { path = "./contracts/timealarms", default-features = false }
treasury = { path = "./contracts/treasury", default-features = false }

# Own Packages
access-control = { path = "./packages/access-control", default-features = false }
currency = { path = "./packages/currency", default-features = false }
finance = { path = "./packages/finance", default-features = false }
marketprice = { path = "./packages/marketprice", default-features = false }
platform = { path = "./packages/platform", default-features = false }
schema = { path = "./packages/schema", default-features = false }
sdk = { path = "./packages/sdk", default-features = false }
swap = { path = "./packages/swap", default-features = false }
time-oracle = { path = "./packages/time-oracle", default-features = false }
versioning = { path = "./packages/versioning", default-features = false }

# General
serde = { version = "1", default-features = false }
serde-json-wasm = { version = "0.5", default-features = false }
postcard = { version = "1", default-features = false }
thiserror = { version = "1", default-features = false }
anyhow = "1"

# CosmWasm
cosmwasm-std = { version = "1.1", default-features = false }
cosmwasm-storage = "1.1"
cosmwasm-schema = "1.1"
cw-storage-plus = "1"
cw-multi-test = "0.16.1"

# Other
neutron-sdk = { git = "https://github.com/neutron-org/neutron-contracts", rev = "2a3c862cb57f5123f196bcd5c9983ed78549c295" }

[profile.release]
opt-level = "s"
debug = false
strip = "symbols"
rpath = false
lto = true
debug-assertions = false
panic = "abort"
overflow-checks = true
