[workspace]
members = ["packages/*", "contracts/*", "tests"]

resolver = "2"

[workspace.package]
rust-version = "1.64"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
# Own Contracts
rewards_dispatcher = { path = "./contracts/dispatcher", default-features = false }
lease = { path = "./contracts/lease", default-features = false }
leaser = { path = "./contracts/leaser", default-features = false }
lpp = { path = "./contracts/lpp", default-features = false }
oracle = { path = "./contracts/oracle", default-features = false }
profit = { path = "./contracts/profit", default-features = false }
timealarms = { path = "./contracts/timealarms", default-features = false }
treasury = { path = "./contracts/treasury", default-features = false }

# Own Packages
access-control = { path = "./packages/access-control", default-features = false }
currency = { path = "./packages/currency", default-features = false }
finance = { path = "./packages/finance", default-features = false }
marketprice = { path = "./packages/marketprice", default-features = false }
platform = { path = "./packages/platform", default-features = false }
schema = { path = "./packages/schema", default-features = false }
sdk = { path = "./packages/sdk", default-features = false }
swap = { path = "./packages/swap", default-features = false }
time-oracle = { path = "./packages/time-oracle", default-features = false }
tree = { path = "./packages/tree", default-features = false }
versioning = { path = "./packages/versioning", default-features = false }

# General
serde = { version = "1", default-features = false }
serde-json-wasm = { version = "0.5", default-features = false }
postcard = { version = "1", default-features = false }
thiserror = { version = "1", default-features = false }
anyhow = "1"

# CosmWasm
cosmwasm-std = { version = "1.1", default-features = false }
cosmwasm-storage = "1.1"
schemars = "0.8.11" # Keep in sync with `cosmwasm-schema`'s version to avoid problems with traits.
cosmwasm-schema = "1.1"
cw-storage-plus = "1"
cw-multi-test = "0.16.1"

# Cosmos-sdk
cosmos-sdk-proto = { version = "0.16.0", default-features = false }

# Other
neutron-sdk = { git = "https://github.com/neutron-org/neutron-sdk", rev = "d0f73c0a377759d0d3fed0bd6d30a17b6b3b110e" }

[profile.release]
opt-level = "s"
debug = false
strip = "symbols"
rpath = false
lto = true
debug-assertions = false
panic = "abort"
overflow-checks = true
