[workspace]
members = ["packages/*", "contracts/*", "tests"]

resolver = "2"

[workspace.package]
rust-version = "1.65"
edition = "2021"
authors = ["The Dev Nolus Team <dev@nolus.io>"]
license = "Apache-2.0"

[workspace.dependencies]
# Own Contracts
rewards_dispatcher = { path = "./contracts/dispatcher", default-features = false }
lease = { path = "./contracts/lease", default-features = false }
leaser = { path = "./contracts/leaser", default-features = false }
lpp = { path = "./contracts/lpp", default-features = false }
oracle = { path = "./contracts/oracle", default-features = false }
profit = { path = "./contracts/profit", default-features = false }
timealarms = { path = "./contracts/timealarms", default-features = false }
treasury = { path = "./contracts/treasury", default-features = false }

# Own Packages
access-control = { path = "./packages/access-control", default-features = false }
currency = { path = "./packages/currency", default-features = false }
dex = { path = "./packages/dex", default-features = false }
finance = { path = "./packages/finance", default-features = false }
marketprice = { path = "./packages/marketprice", default-features = false }
platform = { path = "./packages/platform", default-features = false }
schema = { path = "./packages/schema", default-features = false }
sdk = { path = "./packages/sdk", default-features = false }
swap = { path = "./packages/swap", default-features = false }
time-oracle = { path = "./packages/time-oracle", default-features = false }
tree = { path = "./packages/tree", default-features = false }
versioning = { path = "./packages/versioning", default-features = false }

# General
serde = { version = "1", default-features = false }
serde-json-wasm = { version = "0.5", default-features = false }
postcard = { version = "1", default-features = false }
thiserror = { version = "1", default-features = false }
anyhow = "1"
enum_dispatch = { version = "0.3", default-features = false }

# CosmWasm
cosmwasm-std = { version = "1.2", default-features = false }
cosmwasm-storage = "1.2"
cosmwasm-schema = "1.2"
cw-storage-plus = "1.1"
cw-multi-test = "0.16.1"

# Cosmos-sdk
cosmos-sdk-proto = { version = "0.18", default-features = false }

# Other
neutron-sdk = { git = "https://github.com/neutron-org/neutron-sdk", tag = "v0.6.0" }
osmosis-std = { version = "0.16.0", default-features = false }

[profile.release]
opt-level = "s"
debug = false
strip = "symbols"
rpath = false
lto = true
debug-assertions = false
panic = "abort"
overflow-checks = true
