[workspace]
members = ["packages/*", "contracts/*", "tests"]

resolver = "2"

[workspace.package]
edition = "2021"
authors = ["The Dev Nolus Team <dev@nolus.io>"]
license = "Apache-2.0"

[workspace.dependencies]
# Own Contracts
admin_contract = { path = "contracts/admin", default-features = false }
rewards_dispatcher = { path = "contracts/dispatcher", default-features = false }
timealarms = { path = "contracts/timealarms", default-features = false }
treasury = { path = "contracts/treasury", default-features = false }

# Own Packages
access-control = { path = "packages/access-control", default-features = false }
currency = { path = "packages/currency", default-features = false }
finance = { path = "packages/finance", default-features = false }
lpp-platform = { path = "packages/lpp", default-features = false }
oracle-platform = { path = "packages/oracle", default-features = false }
platform = { path = "packages/platform", default-features = false }
schema = { path = "packages/schema", default-features = false }
sdk = { path = "packages/sdk", default-features = false }
time-oracle = { path = "packages/time-oracle", default-features = false }
tree = { path = "packages/tree", default-features = false }
versioning = { path = "packages/versioning", default-features = false }

# General
serde = { version = "1", default-features = false }
thiserror = { version = "1", default-features = false }
anyhow = "1"
base64 = { version = "0.21", default-features = false }

# CosmWasm
cosmwasm-std = { version = "1.2", default-features = false, features = [
    "cosmwasm_1_2",
] }
cosmwasm-storage = "1.2"
cosmwasm-schema = "1.2"
cw-storage-plus = "1.1"
cw-multi-test = "0.20"

# Cosmos-sdk
cosmos-sdk-proto = { version = "0.20", default-features = false }

# Other
prost = { version = "0.12", default-features = false }
neutron-sdk = { version = "0.8", default-features = false }

[profile.release]
opt-level = "s"
debug = false
strip = "symbols"
rpath = false
lto = true
debug-assertions = false
panic = "abort"
overflow-checks = true
