[workspace]
members = [
    "contracts/*/src/..",
    "packages/*/src/..",
    "tests",
]
exclude = ["target"]

resolver = "2"

[workspace.package]
edition = "2021"
authors = ["The Dev Nolus Team <dev@nolus.io>"]
license = "Apache-2.0"

[workspace.dependencies]
# Own Contracts
admin_contract = { path = "contracts/admin", default-features = false }
rewards_dispatcher = { path = "contracts/dispatcher", default-features = false }
timealarms = { path = "contracts/timealarms", default-features = false }
treasury = { path = "contracts/treasury", default-features = false }

# Own Packages
access-control = { path = "packages/access-control", default-features = false }
currency = { path = "packages/currency", default-features = false }
finance = { path = "packages/finance", default-features = false }
lpp-platform = { path = "packages/lpp", default-features = false }
oracle-platform = { path = "packages/oracle", default-features = false }
platform = { path = "packages/platform", default-features = false }
schema = { path = "packages/schema", default-features = false }
sdk = { path = "packages/sdk", default-features = false }
time-oracle = { path = "packages/time-oracle", default-features = false }
tree = { path = "packages/tree", default-features = false }
versioning = { path = "packages/versioning", default-features = false }

# General
anyhow = "1"
base64 = { version = "0.22", default-features = false }
data-encoding = "2.5.0"
gcd = "2.3.0"
serde = { version = "1", default-features = false }
thiserror = { version = "1", default-features = false }

# CosmWasm
# we cannot jump to version ^2 since neutron-sdk depends on ^1 and the compilation fails due to not satisfying NeutronMsg: cosmwasm_sdk::CustomMsg
# once the issue with neutron gets resolved we may upgrado to 2.x although the layer 1's wasmvm is v1.5
# the contracts v2.0 is compatible
cosmwasm-std = { version = "1.5", default-features = false, features = [
    "cosmwasm_1_2",
] }
cosmwasm-schema = "1.5"
cw-storage-plus = "1.2"
# TODO for some reason versions v1 fail at downcasting err.root_cause(). It seems that the TypeInfo differs.
cw-multi-test = "0.20"

# Cosmos-sdk
# again neutron-sdk is stuck on v0.20 and if we want to update to v0.21 we would get two versions in the build tree that might not be ideal
# since we do not need to update immediatelly we won't do it right now
cosmos-sdk-proto = { version = "0.20", default-features = false }

# Other
prost = { version = "0.12", default-features = false }
neutron-sdk = { version = "0.10", default-features = false }

# Testing
serde_test = "1"

[profile.dev.build-override]
opt-level = 3

[profile.ci_dev]
inherits = "dev"
debug = false
incremental = false
panic = "abort"

[profile.ci_dev_no_debug_assertions]
inherits = "ci_dev"
debug-assertions = false

[profile.release]
build-override = { opt-level = 3 }
debug = false
debug-assertions = false
opt-level = "s"
strip = "symbols"
rpath = false
lto = true
panic = "abort"
overflow-checks = true

[profile.test_nets_release]
inherits = "release"
debug-assertions = true

[profile.production_nets_release]
inherits = "release"
