[workspace]
members = [
    "contracts/*/src/..",
    "packages/*/src/..",
    "tests"
]

resolver = "2"

[workspace.lints.rust]
unexpected_cfgs = { level = "forbid", check-cfg = ["cfg(test)"] }

[workspace.package]
edition = "2021"
authors = ["The Dev Nolus Team <dev@nolus.io>"]
license = "Apache-2.0"

[workspace.dependencies]
# Own Contracts
admin_contract = { path = "contracts/admin", default-features = false }
timealarms = { path = "contracts/timealarms", default-features = false }
treasury = { path = "contracts/treasury", default-features = false }

# Own Packages
access-control = { path = "packages/access-control", default-features = false }
currency = { path = "packages/currency", default-features = false }
finance = { path = "packages/finance", default-features = false }
lpp-platform = { path = "packages/lpp", default-features = false }
oracle-platform = { path = "packages/oracle", default-features = false }
platform = { path = "packages/platform", default-features = false }
schema = { path = "packages/schema", default-features = false }
sdk = { path = "packages/sdk", default-features = false }
time-oracle = { path = "packages/time-oracle", default-features = false }
tree = { path = "packages/tree", default-features = false }
versioning = { path = "packages/versioning", default-features = false }

# General
anyhow = "1"
base64 = { version = "0.22", default-features = false }
gcd = "2"
serde = { version = "1", default-features = false }
thiserror = { version = "1", default-features = false }

# CosmWasm
# TBD version = "<major>" only once address PR#469
cosmwasm-std = { version = "~2.1", default-features = false, features = [
    "abort",
    "cosmwasm_1_2",
    "iterator",
    "std",
] }
cosmwasm-schema = "2"
cw-storage-plus = "2"
cw-multi-test = { version = "2", default-features = false, features = [
    "cosmwasm_1_2",
    "staking",
    "stargate",
] }

# neutron-sdk is stuck on v0.20 and we would get two versions in the build tree that might not be ideal
cosmos-sdk-proto = { version = "0.25", default-features = false, features = [ "std" ] }
ibc-proto = { version = "0.49", default-features = false }

# Other
neutron-sdk = { version = "0.11", default-features = false }

# Testing
serde_test = "1"

[profile.dev.build-override]
opt-level = 3

[profile.ci_dev]
inherits = "dev"
debug = false
incremental = false
panic = "abort"

[profile.ci_dev_no_debug_assertions]
inherits = "ci_dev"
debug-assertions = false

[profile.release]
build-override = { opt-level = 3 }
debug = false
debug-assertions = false
opt-level = "s"
strip = "symbols"
rpath = false
lto = true
panic = "abort"
overflow-checks = true

[profile.test_nets_release]
inherits = "release"
debug-assertions = true

[profile.production_nets_release]
inherits = "release"
