[workspace]
members = ["packages/*", "contracts/*"]

resolver = "2"

[workspace.package]
edition = "2021"
authors = ["The Dev Nolus Team <dev@nolus.io>"]
license = "Apache-2.0"

[workspace.dependencies]
# Own Contracts
lease = { path = "contracts/lease", default-features = false }
leaser = { path = "contracts/leaser", default-features = false }
lpp = { path = "contracts/lpp", default-features = false }
oracle = { path = "contracts/oracle", default-features = false }
profit = { path = "contracts/profit", default-features = false }

# Own Packages
dex = { path = "packages/dex", default-features = false }
marketprice = { path = "packages/marketprice", default-features = false }
swap = { path = "packages/swap", default-features = false }

# Platform Contracts
timealarms = { path = "../platform/contracts/timealarms", default-features = false }

# Platform Packages
access-control = { path = "../platform/packages/access-control", default-features = false }
currency = { path = "../platform/packages/currency", default-features = false }
finance = { path = "../platform/packages/finance", default-features = false }
lpp-platform = { path = "../platform/packages/lpp", default-features = false }
oracle-platform = { path = "../platform/packages/oracle", default-features = false }
platform = { path = "../platform/packages/platform", default-features = false }
schema = { path = "../platform/packages/schema", default-features = false }
sdk = { path = "../platform/packages/sdk", default-features = false }
tree = { path = "../platform/packages/tree", default-features = false }
versioning = { path = "../platform/packages/versioning", default-features = false }

# General
serde = { version = "1", default-features = false }
serde-json-wasm = { version = "0.5", default-features = false }
postcard = { version = "1", default-features = false }
thiserror = { version = "1", default-features = false }
enum_dispatch = { version = "0.3", default-features = false }

# CosmWasm
# Required as a dependency by `entry_point` attribute macro
cosmwasm-std = { version = "1.2", default-features = false }

# Other
osmosis-std = { version = "0.19.1", default-features = false }

[profile.release]
opt-level = "s"
debug = false
strip = "symbols"
rpath = false
lto = true
debug-assertions = false
panic = "abort"
overflow-checks = true
