[workspace]
members = [
    "contracts/*/src/..",
    "packages/*/src/..",
    "tests"
]

resolver = "2"

[workspace.lints.rust]
unexpected_cfgs = { level = "forbid", check-cfg = ["cfg(test)"] }

[workspace.package]
edition = "2021"
authors = ["The Dev Nolus Team <dev@nolus.io>"]
license = "Apache-2.0"

[workspace.dependencies]
# Own Contracts
lease = { path = "contracts/lease", default-features = false }
leaser = { path = "contracts/leaser", default-features = false }
lpp = { path = "contracts/lpp", default-features = false }
oracle = { path = "contracts/oracle", default-features = false }
profit = { path = "contracts/profit", default-features = false }
reserve = { path = "contracts/reserve", default-features = false }

# Own Packages
currencies = { path = "packages/currencies", default-features = false }
dex = { path = "packages/dex", default-features = false }
marketprice = { path = "packages/marketprice", default-features = false }
swap = { path = "packages/swap", default-features = false }

# Platform Contracts
admin_contract = { path = "../platform/contracts/admin", default-features = false }
timealarms = { path = "../platform/contracts/timealarms", default-features = false }

# Platform Packages
access-control = { path = "../platform/packages/access-control", default-features = false }
currency = { path = "../platform/packages/currency", default-features = false }
finance = { path = "../platform/packages/finance", default-features = false }
lpp-platform = { path = "../platform/packages/lpp", default-features = false }
oracle-platform = { path = "../platform/packages/oracle", default-features = false }
platform = { path = "../platform/packages/platform", default-features = false }
schema = { path = "../platform/packages/schema", default-features = false }
sdk = { path = "../platform/packages/sdk", default-features = false }
tree = { path = "../platform/packages/tree", default-features = false }
versioning = { path = "../platform/packages/versioning", default-features = false }

# Tools Packages
topology = { path = "../tools/topology" }

# General
anyhow = "1"
base64 = { version = "0.22", default-features = false }
enum_dispatch = { version = "0.3", default-features = false }
serde = { version = "1", default-features = false }
serde_json = "1"
postcard = { version = "1", default-features = false }
thiserror = { version = "2", default-features = false }

# CosmWasm
# Required as a dependency by `entry_point` attribute macro
# TBD version = "<major>" only once address PR#469
cosmwasm-std = { version = "~2.1", default-features = false, features = [
    "abort",
    "iterator",
    "std",
] }

# Other
astroport = { version = "5", default-features = false }
osmosis-std = { version = "0.27.0", default-features = false }

[profile.dev.build-override]
opt-level = 3

[profile.ci_dev]
inherits = "dev"
debug = false
incremental = false
panic = "abort"

[profile.ci_dev_no_debug_assertions]
inherits = "ci_dev"
debug-assertions = false

[profile.release]
build-override = { opt-level = 3 }
debug = false
debug-assertions = false
opt-level = "s"
strip = "symbols"
rpath = false
lto = true
panic = "abort"
overflow-checks = true

[profile.test_nets_release]
inherits = "release"
debug-assertions = true

[profile.production_nets_release]
inherits = "release"
