[package]
name = "integration_tests"
version = "0.3.0"
edition = "2024"
authors = ["The Dev Nolus Team <dev@nolus.io>"]
license = "Apache-2.0"
resolver = "3"
rust-version = "1.94"

[package.metadata.cargo-each]
# Every suite — lease, leaser, lpp, oracle, reserve, timealarms, treasury, and
# (post-#652 PR4b) profit — drives its remote leg exclusively through a
# controller stand-in, never a real per-DEX swap client. The whole suite is
# therefore DEX-agnostic and compiles+runs once under the placeholder DEX. The
# former per-DEX matrix existed only for the local-DEX profit swap, which the
# remote-swap rewrite retired.
combinations = [
    { tags = ["ci", "@agnostic"], always-on = ["dex-test_impl"], include-rest = false },
]

### [SYNC WITH OTHER WORKSPACES : START]
[workspace.lints.clippy]
all = "deny"
large_enum_variant = { level = "allow", priority = 1 }
unwrap_in_result = "deny"
unwrap_used = "deny"

[workspace.lints.rust]
deprecated_safe = "forbid"
future-incompatible = { level = "deny", priority = 1 }
keyword-idents = { level = "deny", priority = 1 }
nonstandard-style = { level = "deny", priority = 1 }
refining-impl-trait = { level = "deny", priority = 1 }
rust-2018-idioms = { level = "deny", priority = 1 }
unexpected_cfgs = { level = "forbid", priority = 1, check-cfg = ["cfg(test)"] }
unfulfilled_lint_expectations = { level = "forbid", priority = 1 }
unused = "deny"
warnings = "deny"
### [SYNC WITH OTHER WORKSPACES : END]

[features]
# The suite gate: selects the DEX-agnostic module set (see the note above the
# `cargo-each` combos). The profit contract retired its per-DEX local-swap client
# for the remote-swap transport, so this no longer forwards to a `profit/dex-*`
# feature — it is a self-contained switch the module `#[cfg]`s in `src/lib.rs` key off.
dex-test_impl = []

[dev-dependencies]
admin_contract = { path = "../platform/contracts/admin", features = ["contract"], default-features = false }
lease = { path = "../protocol/contracts/lease", features = ["contract_testing"], default-features = false }
leaser = { path = "../protocol/contracts/leaser", features = ["testing"], default-features = false }
lpp = { path = "../protocol/contracts/lpp", features = ["contract", "testing"], default-features = false }
oracle = { path = "../protocol/contracts/oracle", features = ["contract_testing"], default-features = false }
profit = { path = "../protocol/contracts/profit", features = ["contract", "testing"], default-features = false }
reserve = { path = "../protocol/contracts/reserve", features = ["contract", "testing"], default-features = false }
timealarms = { path = "../platform/contracts/timealarms", features = ["contract", "testing"], default-features = false }
treasury = { path = "../platform/contracts/treasury", default-features = false }

access-control = { path = "../platform/packages/access-control", default-features = false }
cw-time = { path = "../platform/packages/cw-time", default-features = false }
currencies = { path = "../protocol/packages/currencies", features = ["testing"], default-features = false }
currency = { path = "../platform/packages/currency", features = ["testing"], default-features = false }
dex = { path = "../protocol/packages/dex", features = ["testing"], default-features = false }
finance = { path = "../platform/packages/finance", features = ["testing"], default-features = false }
lpp-platform = { path = "../platform/packages/lpp", features = ["testing"], default-features = false }
marketprice = { path = "../protocol/packages/marketprice", features = ["testing"], default-features = false }
platform = { path = "../platform/packages/platform", features = ["testing"], default-features = false }
drain_vault = { path = "../protocol/contracts/drain_vault", features = ["contract"], default-features = false }
remote_lease = { path = "../protocol/packages/remote_lease", default-features = false }
remote_lease_controller = { path = "../protocol/contracts/remote_lease", default-features = false }
remote_profit = { path = "../protocol/packages/remote_profit", default-features = false }
remote_profit_controller = { path = "../protocol/contracts/remote_profit", default-features = false }
remote_profit_wire = { path = "../protocol/packages/remote_profit_wire", default-features = false }
sdk = { path = "../platform/packages/sdk", features = ["testing"], default-features = false }
tree = { path = "../platform/packages/tree", features = ["testing"], default-features = false }
versioning = { path = "../platform/packages/versioning", features = ["testing"], default-features = false }

thiserror = { version = "2", default-features = false }
serde = { version = "1", features = ["derive"], default-features = false }

[profile.dev.build-override]
opt-level = 3

[profile.ci_dev]
inherits = "dev"
debug = false
incremental = false
panic = "abort"

[profile.ci_dev_no_debug_assertions]
inherits = "ci_dev"
debug-assertions = false

[patch.crates-io]
cw-multi-test = { git = "https://github.com/nolus-protocol/cw-multi-test", branch = "fix-execute-error-wrapping" }
