[workspace]
members = ["*/src/.."]

resolver = "2"

[workspace.package]
edition = "2021"
authors = ["The Dev Nolus Team <dev@nolus.io>"]
license = "Apache-2.0"

[workspace.lints.rust]
unexpected_cfgs = { level = "forbid", check-cfg = ["cfg(test)"] }

[workspace.dependencies]
topology = { path = "topology" }

anyhow = "1"
cargo_metadata = "0.18.1"
clap = { version = "4.5", features = ["derive", "unicode"] }
either = { version = "1", default-features = false }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.8"

[profile.dev.build-override]
opt-level = 3

[profile.ci_dev]
inherits = "dev"
debug = false
incremental = false
panic = "abort"

[profile.ci_dev_no_debug_assertions]
inherits = "ci_dev"
debug-assertions = false

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
