[workspace]
members = ["*/src/.."]

resolver = "3"

[workspace.package]
edition = "2024"
authors = ["The Dev Nolus Team <dev@nolus.io>"]
license = "Apache-2.0"
rust-version = "1.86"

### [SYNC WITH OTHER WORKSPACES : START]
[workspace.lints.clippy]
all = "deny"
large_enum_variant = { level = "allow", priority = 1 }
unwrap_in_result = "deny"
unwrap_used = "deny"

[workspace.lints.rust]
deprecated_safe = "forbid"
future-incompatible = { level = "deny", priority = 1 }
keyword-idents = { level = "deny", priority = 1 }
nonstandard-style = { level = "deny", priority = 1 }
refining-impl-trait = { level = "deny", priority = 1 }
rust-2018-idioms = { level = "deny", priority = 1 }
unexpected_cfgs = { level = "forbid", priority = 1, check-cfg = ["cfg(test)"] }
unfulfilled_lint_expectations = { level = "forbid", priority = 1 }
unused = "deny"
warnings = "deny"
### [SYNC WITH OTHER WORKSPACES : END]

[workspace.dependencies]
# Own packages
json-value = { path = "json-value" }
topology = { path = "topology" }

# General packages
anyhow = "1"
cargo_metadata = "0.20"
clap = { version = "4.5", features = ["derive", "unicode"] }
either = { version = "1", default-features = false }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.8"

# Testing packages
serde_test = "1"

[profile.dev.build-override]
opt-level = 3

[profile.ci_dev]
inherits = "dev"
debug = false
incremental = false
panic = "abort"

[profile.ci_dev_no_debug_assertions]
inherits = "ci_dev"
debug-assertions = false

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
